--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async": "^2.4.1",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "connect-redis": "^3.3.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
@@ -32,6 +33,7 @@
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
+    "normalize.css": "^7.0.0",
     "path": "^0.12.7",
     "pg": "^6.2.3",
     "redis": "^2.7.1",
