--- a/package.json
+++ b/package.json
@@ -33,11 +33,12 @@
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "normalize.css": "^7.0.0",
+    "mysql2": "^1.3.4",
     "path": "^0.12.7",
     "pg": "^6.2.3",
     "redis": "^2.7.1",
     "request": "^2.81.0",
+    "sequelize": "^4.1.0",
     "underscore": "^1.8.3"
   }
 }
