update .env.example for default database adapter and create recursive funcntion to acquire file

--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@ APP_ENCRYPT_KEY=
 
 DB_HOST=127.0.0.1
 DB_NAME=development_db
-DB_PORT=5432
+DB_PORT=3306
 DB_USERNAME=
 DB_PASSWORD=
-DB_ADAPTER=
+DB_ADAPTER=mysql
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
