--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "feature-flag",
   "version": "1.0.0",
-  "description": "This app will create an app like split.io but the simple one",
+  "description": "This will be the framework to start with NodeJS project.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --reporter spec",
     "start": "node app.js"
   },
   "repository": {
@@ -30,7 +30,6 @@
     "helmet": "^3.6.1",
     "limiter": "^1.1.0",
     "method-override": "^2.3.9",
-    "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
     "mysql2": "^1.3.4",
@@ -39,6 +38,13 @@
     "redis": "^2.7.1",
     "request": "^2.81.0",
     "sequelize": "^4.1.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "should": "^11.2.1",
+    "supertest": "^3.0.0"
   }
 }
