--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redis": "^2.7.1",
     "request": "^2.81.0",
     "sequelize": "^4.1.0",
+    "sequelize-cli": "^2.8.0",
     "underscore": "^1.8.3",
     "uuid": "^3.1.0"
   },
