Add env for database testing Add sinon package for Mock test Add most commonly used test variable to get easily access from other test

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.11.0",
     "should": "^11.2.1",
+    "sinon": "^3.2.0",
     "supertest": "^3.0.0"
   },
   "homepage": "https://bitbucket.org/marprin/node-framework#readme"
