--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "pg": "^6.2.3",
     "redis": "^2.7.1",
     "request": "^2.81.0",
+    "request-promise": "^4.2.1",
     "sequelize": "^4.1.0",
     "sequelize-cli": "^2.8.0",
     "underscore": "^1.8.3",
