--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "^2.4.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.0.0-alpha.6",
+    "connect-flash": "^0.1.1",
     "connect-redis": "^3.3.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
@@ -51,5 +52,8 @@
     "sinon": "^3.2.0",
     "supertest": "^3.0.0"
   },
-  "homepage": "https://bitbucket.org/marprin/node-framework#readme"
+  "homepage": "https://bitbucket.org/marprin/node-framework#readme",
+  "directories": {
+    "test": "test"
+  }
 }
